# sigmaepsilon.solid.material

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_pytest_cov.sh  run_pytest_cov_nojit.sh  run_tests_with_coverage.bat  run_tests_with_coverage.sh  run_tests_with_coverage_nojit.sh
.circleci/: config.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  doc_utils.py  examples_gallery.rst  getting_started.ipynb  index.rst  user_guide.rst
docs/source/api/: api_all.rst
docs/source/examples/: example_1.ipynb
docs/source/notebooks/: Kirchoff_pyvista.ipynb  concrete_section.ipynb  console_fem_Q9_M.ipynb  hoffman_fit.ipynb  hoffman_symbolic.ipynb  kirchhoff_plate_plotting_mpl.ipynb  kirchhoff_shell.ipynb  membrane.ipynb  mindlin_plate_plotting_mpl.ipynb  mindlin_shell.ipynb  principal_stresses.ipynb  solid3d.ipynb
notebooks/: concrete_section.ipynb  fit_hoffman.ipynb  frames.ipynb  hoffman.ipynb  hoffman_symbolic.ipynb  kirchhoff_plate_plotting_mpl.ipynb  kirchhoff_shell.ipynb  material_models.ipynb  membrane.ipynb  mindlin_plate_plotting_mpl.ipynb  mindlin_shell.ipynb  sections.ipynb  solid3d.ipynb  solid3d_benchmark.ipynb  surfaces.ipynb
src/sigmaepsilon/solid/core/material/: __init__.py  elasticitytensor.py  testing.py  warnings.py
src/sigmaepsilon/solid/core/material/frame/: bernoulliframe.py
src/sigmaepsilon/solid/core/material/surface/: __init__.py  membrane.py  mindlin.py  surface.py
src/sigmaepsilon/solid/core/material/utils/: bernoulli.py  material.py  surface.py  tr.py  utils.py
src/sigmaepsilon/solid/material/: __init__.py  abstract.py  config.py  elasticitytensor.py  enums.py  evaluator.py  exceptions.py  linearelasticmaterial.py  meta.py  proto.py  straintensor.py  tensor2x3.py  warnings.py
src/sigmaepsilon/solid/material/failure/: __init__.py  abstract.py  hmh.py  hoffman.py
src/sigmaepsilon/solid/material/frame/: __init__.py  bernoulliframe.py
src/sigmaepsilon/solid/material/surface/: __init__.py  kirchhoffplate.py  kirchhoffshell.py  membrane.py  mindlinplate.py  mindlinshell.py  surface.py
src/sigmaepsilon/solid/material/utils/: __init__.py  hmh.py  hoffman.py  material.py  mindlin.py  postproc.py  principal.py  surface.py
tests/: test_bernoulli_frame.py  test_elasticitytensor.py  test_enums.py  test_failure.py  test_kirchhoff_plate.py  test_kirchhoff_shell.py  test_linear_elastic_material.py  test_membrane.py  test_mindlin_plate.py  test_mindlin_shell.py
tests/failure/: test_hmh_failure_criterion.py  test_hoffman_failure_criterion.py
